<resources>
    <string name="app_name">MyLocalEvents</string>
    <string name="action_settings">Settings</string>

    <string name="eventbrit_token">Add your EventBrite api key here</string>
    <string name="title_activity_details_event">Event Details</string>
    <string name="title_activity_main">Close Events</string>
    <string name="free">FREE</string>
    <string name="paid">PAID</string>

    <string name="location_not_found">Location not found</string>
    <string name="no_events">No events found in your location</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="gps">Opening GPS</string>
    <string name="open_gps">Would you please open your GPS so we can look for events near you ?</string>
    <string name="choose_a_date">choose a date</string>
    <string name="get_events">get events</string>
    <string name="current_location">Current location :</string>
    <string name="hey_there">Hey there</string>

    <string name="search_range">Search Range :  %s  Km</string>
    <string name="format_date">yyyy-MM-dd</string>
    <string name="get_location">Please wait while getting your location</string>

    <string name="location_text">Current Location is : \n %s  ,  %s . </string>
    <string name="_200">200</string>
    <string name="_10">10</string>
    <string name="make_reservation">Reservation</string>
    <string name="event_details">Event Details</string>
    <string name="adresse_not_available">Address is not available for this event</string>
    <string name="mylocalevent_description">Welcome to blabla  \nin this app you can find all the events that are happening in your city , simply pick a range of search , a category and a date and hit the get events button</string>
</resources>
